--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "open": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "next": "14.0.3",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "cypress": "^13.5.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
